--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ language: python
 matrix:
   allow_failures:
     - os: linux
+      python: "2.7"
+      sudo: required
+      env: CONDA=N
+    - os: linux
       python: "3.5"
       sudo: required
       env: CONDA=N
@@ -23,6 +27,11 @@ matrix:
       dist: xenial
       sudo: required
       env: CONDA=N
+    - os: linux
+      python: "2.7"
+      dist: xenial
+      sudo: required
+      env: CONDA=Y CONDAPY=2.7
     - os: linux
       python: "3.7"
       dist: xenial
